# ota_qt

./: CMakeCache.txt  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
